[gd_scene load_steps=3 format=3 uid="uid://bxv0deocrf5tp"]

[ext_resource type="Script" path="res://map_editor_pop_up.gd" id="1_umg5j"]
[ext_resource type="FontFile" uid="uid://dvjpeiguvrck1" path="res://BLACKCASTLEMF.TTF" id="2_38bw8"]

[node name="MapEditorPopUp" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_umg5j")

[node name="MapPopUp" type="Window" parent="."]
initial_position = 1
size = Vector2i(400, 500)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="MapPopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MapPopUp/MarginContainer"]
layout_mode = 2

[node name="PopUpTitle" type="Label" parent="MapPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_38bw8")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ThumbnailView" type="TextureRect" parent="MapPopUp/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MapPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapList" type="VBoxContainer" parent="MapPopUp/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapNameInput" type="LineEdit" parent="MapPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MapPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="LoadButton" type="Button" parent="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Map"

[node name="SaveButton" type="Button" parent="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Map"

[node name="SaveAsButton" type="Button" parent="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save As"

[node name="ErrorPopUp" type="Popup" parent="."]
auto_translate_mode = 1
initial_position = 5

[node name="MarginContainer" type="MarginContainer" parent="ErrorPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorPopUp/MarginContainer"]
layout_mode = 2

[node name="ErrorMessage" type="Label" parent="ErrorPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="ErrorPopupOkButton" type="Button" parent="ErrorPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "OK"

[node name="ConfirmationPopUp" type="Popup" parent="."]
initial_position = 1
size = Vector2i(150, 150)

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationPopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationPopUp/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ConfirmationMessage" type="Label" parent="ConfirmationPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_38bw8")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ConfirmationPopupOKButton" type="Button" parent="ConfirmationPopUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "OK"

[connection signal="close_requested" from="MapPopUp" to="." method="_on_load_save_map_pop_up_close_requested"]
[connection signal="text_changed" from="MapPopUp/MarginContainer/VBoxContainer/MapNameInput" to="." method="_on_map_name_input_text_changed"]
[connection signal="pressed" from="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MapPopUp/MarginContainer/VBoxContainer/HBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="ConfirmationPopUp/MarginContainer/VBoxContainer/ConfirmationPopupOKButton" to="." method="_on_confirmation_popup_ok_button_pressed"]
